# AgbadoAPI

./: .cursorrules  Makefile  README.md  helper.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: deploy.yml  deploy_agbado.yml  deploy_lucasdennis copy.yml
agbado/: asgi.py  settings.py  urls.py  wsgi.py
auth_app/: admin.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py  viewsets.py
auth_app/management/commands/: seed_referral_codes.py  test_cloudinary.py  test_referral_codes.py
auth_app/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_alter_user_managers.py  0004_user_profile_picture_user_referral_code_user_state_and_more.py  0005_alter_otp_otp.py  0006_user_is_busy.py  0007_webauthncredential.py  0008_alter_kyc_driver_license_alter_kyc_national_id_and_more.py  0009_user_pin.py  0010_alter_kyc_options_alter_otp_options_and_more.py  0011_alter_otp_expires_at.py
auth_app/test/: test_admin.py  test_models.py  test_serializers.py  test_signal.py  test_urls.py  test_utils.py  test_views.py  test_viewsets.py
notification_app/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py  viewsets.py
notification_app/migrations/: 0001_initial.py  0002_notification_title.py  0003_alter_notification_options_and_more.py
provider_app/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py  viewsets.py
provider_app/migrations/: 0001_initial.py  0002_remove_serviceprovider_contact_info_and_more.py  0003_alter_serviceprovider_closing_hour_and_more.py  0004_alter_serviceprovider_business_category.py  0005_alter_serviceprovider_company_logo.py  0006_alter_serviceprovider_options_and_more.py  0007_rename_provider_ap_busines_755927_idx_provider_ap_busines_75257d_idx.py  0008_alter_serviceprovider_business_category.py
service_app/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py  viewsets.py
service_app/management/commands/: seed_demo.py
service_app/migrations/: 0001_initial.py  0002_rename_requested_at_servicerequest_created_at_and_more.py  0003_alter_service_max_price_alter_service_min_price_and_more.py  0004_alter_service_category_alter_servicerequest_category.py  0005_alter_service_category_alter_servicerequest_category.py  0006_alter_service_image_alter_servicerequest_image_and_more.py  0007_alter_booking_options_alter_service_options_and_more.py  0008_category_and_more.py
user_app/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py  viewsets.py
user_app/migrations/: 0001_initial.py  0002_gift_usergift.py  0003_alter_dailytask_options_alter_gift_options_and_more.py
wallet_app/: admin.py  apps.py  models.py  monnify.py  monnify_service.py  serializers.py  services.py  signals.py  test_monnify_service.py  urls.py  views.py  viewsets.py
